--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "px2rem",
-  "version": "0.0.0",
-  "description": "An electron-vue project",
+  "name": "frontend-tools",
+  "version": "0.0.1",
+  "description": "前端工具集合",
   "scripts": {
     "build": "npm run pack && build",
     "build:dir": "npm run pack && build --dir",
@@ -14,8 +14,8 @@
     "postinstall": "npm run lint:fix && cd app && npm install"
   },
   "build": {
-    "productName": "px2rem",
-    "appId": "org.deboy.px2rem",
+    "productName": "frontend-tools",
+    "appId": "org.deboy.frontend-tools",
     "category": "public.app-category.tools",
     "dmg": {
       "contents": [
@@ -53,6 +53,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.8.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
@@ -64,22 +65,23 @@
     "del": "^2.2.1",
     "devtron": "^1.1.0",
     "electron": "^1.3.1",
+    "electron-builder": "^11.4.4",
     "electron-debug": "^1.1.0",
     "electron-devtools-installer": "^2.0.1",
-    "electron-builder": "^11.4.4",
     "electron-rebuild": "^1.1.3",
-    "babel-eslint": "^7.0.0",
     "eslint": "^3.13.1",
+    "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^2.0.0",
-    "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.16.1",
     "json-loader": "^0.5.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "tree-kill": "^1.1.0",
     "url-loader": "^0.5.7",
