--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "px2rem",
-  "version": "0.0.0",
+  "name": "frontend-tools",
+  "version": "0.0.1",
   "description": "An electron-vue project",
   "main": "./dist/main.js",
   "dependencies": {
