--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "vue": "^2.1.10",
     "vue-blu": "^0.1.9",
+    "vue-color": "^2.0.6",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.1.2",
     "vuex": "^2.1.1"
